# plsr-sinusoid-demo

./: .gitignore  Cargo.toml  README.md
src/: data.rs  main.rs  metrics.rs  plsr.rs  viz.rs
