[package]
name = "plsr-sinusoid-demo"
version = "0.1.0"
edition = "2024"
authors = ["Dhiaa Eddine Bahri <dhya.bahri@proton.me>", "Malek Rihani <malek.rihani090@gmail.com>"]
description = "Educational PLSR demo on synthetic sinusoids - discovers hidden amplitude, frequency, phase"
license = "GPLv3"
keywords = ["plsr", "statistics", "latent-variables", "data-analysis", "data-science", "sinusoid"]

[dependencies]
ndarray = "0.17.1"
ndarray-linalg = "0.18.0"
ndarray-rand = "0.16.0"
rand = "0.9.2"


[features]
default = ["plot"]
plot = ["plotters"]
